syntax = "proto3";

package banking;

option java_multiple_files = true;
option java_package = "com.javainuse.banking";


message BigDecimalProto {
  int64 unscaled_value = 1;
  int32 scale = 2;
}

message AccountRequest {
  string account_number = 1;
  int32 duration_in_days = 2;
}


message TransactionDetail {
  string transaction_id = 1;
  string transaction_type = 2;
  BigDecimalProto transaction_amount = 3;
}

message TransactionDetailList {
  repeated TransactionDetail transaction_details = 1;
}


service TransactionService {
  rpc GetTransactions (AccountRequest) returns (TransactionDetailList);
}